<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.apress.bgn</groupId>
        <artifactId>java-23-for-absolute-beginners</artifactId>
        <version>3.0-SNAPSHOT</version>
    </parent>

    <artifactId>chapter03</artifactId>
    <name>Chapter 03: Java Fundamentals</name>
    <description>Contains sources for Chapter 3.</description>
    <packaging>jar</packaging>

    <dependencies>
        <dependency>
            <groupId>com.apress.bgn</groupId>
            <artifactId>chapter00</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <!-- This is referenced in Appendix A. -->
        <dependency>
            <groupId>com.apress.bgn</groupId>
            <artifactId>chapter01</artifactId>
            <version>${project.parent.version}</version>
            <scope>runtime</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>libs/</classpathPrefix>
                            <mainClass>
                                com.apress.bgn.three.Main
                            </mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>23</source>
                    <target>23</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>